--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 GOOGLE_ID = 199353286516-0g9jdkk3jk75k32g6iu1bqe8oob5oaia.apps.googleusercontent.com
 GOOGLE_SECRET = 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
-MONGODB_URI = "mongodb+srv://d3office:Dhaka123@cluster0.ghu3gng.mongodb.net"
+MONGODB_URI = "mongodb+srv://sumon0002001:Dhaka123456@recipes.wdqtwxu.mongodb.net/"
 
 NEXTAUTH_SECRET = FyOMAcRGD9AdjaxJz6NKELAOG39mmOTvdLo/OKa7c8g=
 NEXTAUTH_URL = "http://localhost:3000"
